# PhD

./: .gitignore  .gitmodules  \
docs/: README.md  installationNektar.txt
docs/errors&corrections/: EVSolverSegmentationFault.txt
docs/meetings/: 20241003_ganlin.txt  20241015_spencer.txt  20241031_s.txt  20241107_s.txt  20241114_spencer.txt  20241121_s.txt  20241128_spencer.txt  20241129_spencer.txt  20241203_spencer.txt  20241212_spencer.txt  20250112_syj.txt  20250121_y.txt  20250130_1_y.txt  20250130_2_sy.txt  20250213_sy.txt  20250219_spencer_yongyun.txt  20250221_yongyun.txt  20250227_yongyun.txt  20250306_spencer_yongyun.txt  20250306_sy.txt  20250313_spencer_yongyun.txt  20250320_sy.txt  20250326_spencer_youngun.txt  20250327_sy.txt  20250402_syj.txt  20250409_sy.txt  20250424_y.txt  20250430_sy.txt  20250506_sy.txt  20250514_sy.txt  20250521_sy.txt  20250528_sy.txt  20250528_syj.txt  20250604_y.txt  20250613_sy.txt  20250717_y.txt  20250801_y.txt  20250806_y.txt  20250813_y.txt
docs/notes/: 20241114.md  20241114.txt  20241125.md  20241125_arnoldi.md  20241202.md  20241212.md  20241212_SFD.md  20241213.md  20250108_instabilities.md  20250122_BoundaryLayer.md  20250123_gmshFormula.md  20250131_betterBlasius.md  20250208_killProcessOtherNodes.md  20250220_outflowBC.md  20250228_GlobalAbsoluteConvectiveInstabilities.md  202502_LinearStabilityCourseYongyun.md  20250303_basinOfAttraction.md  20250414_Blasius_formulas.md  20250812_WhyDirichletOutflowBCsCauseProblems.md  20250821_dependencyInPerturbationShapeBL.md  _sidebar.md  index.html
examplesNektar/markdownTutorials/fundamentals-differentiation/tutorial/: CMakeCache.txt  CMakeLists.txt  LocDifferentiation2D  LocDifferentiation2D.cpp  Makefile  StdDifferentiation1D  StdDifferentiation1D.cpp  StdDifferentiation2D  StdDifferentiation2D.cpp  cmake_install.cmake
examplesNektar/markdownTutorials/fundamentals-integration/completed/: CMakeCache.txt  CMakeLists.txt  LocIntegration2D.cpp  Makefile  StdIntegration1D.cpp  StdIntegration2D.cpp  cmake_install.cmake
examplesNektar/markdownTutorials/fundamentals-integration/tutorial/: CMakeCache.txt  CMakeLists.txt  LocIntegration2D  LocIntegration2D.cpp  Makefile  StdIntegration1D  StdIntegration1D.cpp  StdIntegration2D  StdIntegration2D.cpp  cmake_install.cmake
exercicesBook/ch1/ex1/: ex1b  ex1b.cpp  ex1c  ex1c.cpp
exercicesBook/ch1/ex2/: ex2a  ex2a.cpp  ex2b  ex2b.cpp
exercicesBook/ch2/ex1/: ex1a  ex1a.cpp
exercicesBook/ch2/ex2/: ex2b  ex2b.cpp  ex2c  ex2c.cpp
latex/: myImperialBeamerTemplate.sty  references.bib
latex/Images/: Nfactors.tex  domain.fdb_latexmk  domain.fls  domain.tex  domainBS.fdb_latexmk  domainBS.fls  domainBS.tex  domainBaseflow.tex  domainPert.tex  domainWall.fdb_latexmk  domainWall.fls  domainWall.tex  domain_Imperialtheme.fdb_latexmk  domain_Imperialtheme.fls  gapd1.5_w30.tex  gapd1_w60.tex  gapd2.25_w35.tex  gapd4_w15.tex  incNS2dStabilityCurve.fdb_latexmk  incNS2dStabilityCurve.fls  incNS2dStabilityCurve.tex  mesh.tex  nfactor_countour.tex  nfactor_countour_contourtmp0.lua  nfactor_countour_contourtmp1.lua  squareTriangle.tex  vcs2d.tex
latex/abstracts/: sample.txt
latex/paperReviews/: nfactorCNN_review.aux  nfactorCNN_review.fdb_latexmk  nfactorCNN_review.fls  nfactorCNN_review.tex
latex/reports/: preamble.sty  preamble_bib.sty  preamble_style.sty
latex/slidesMeetings/: joinPDFs.sh
others/ganlinFiles/: bnd_inflow_sweep60.bc  session_biGlobal_updated2.xml  session_gap.xml  session_gap_2d.xml
others/junjieFiles/: conditions_FP_lin.xml  smallFP.xml
scripts/: CFL_plot.py  EnergyModes.py  closeNodes.sh  copyFromICHPC_YETTOBEFINISH.sh  copyToICHPC.sh  copyToNodes.sh  createGapFolder.sh  createLSfromBaseflow.sh  createModes.sh  createParameterRuns.sh  createPointsOfSectionDomain.sh  createPointsOfSectionDomainAllChkFiles.sh  createPointsOfSectionDomainOld.sh  createPointsOfSectionDomainOneChkFile.sh  fieldconvert.sh  fit_gmsh.py  getReSectionDomain.py  historyPoints.sh  interpolateFields2Mesh.sh  jobFinish.py  jobStart.py  msh2tikz.py  nekmesh.sh  openNodes.sh  paraview.job  pbspro.sh  plotEVReIm.py  plotEnergy.py  plotEnergyError.py  plotHistoryPoints.py  plotHistoryPointsNEW.py  plotNeutralCurve.py  plotNfactor.py  plotNfactorCurve.py  plotNfactorFromSections.py  plotNfactorFromSectionsTest.py  plotNfactorOrrSommerfeld.py  plotPointsAverageSectionDomain.py  plotPointsSectionDomain.py  plotStabilityCurve_wVSd.py  (+18 more)
scripts/bashFunctions/: computeTimeMax.sh  getDepthANDWidth.sh  getMeshSessionFiles.sh  onCancel.sh  runComNS.sh  runIncNS.sh  updateHistoryEnergyFiles.sh  uploadDateFile.sh
scripts/blasius/: README.md  fitting.py  misc.py  physicalParameters.py  physicalQuantities.py  plot.py  pyproject.toml  solve_bvp.py
scripts/pp/: pyproject.toml
scripts/pp/oldNOTClean/: plotNfactorOrrSommerfeld.py  plotStabilityCurve_wVSd.py
scripts/pp/scripts/: CFL_plot.py  computeDataStressFields.py  fit_gmsh.py  msh2tikz.py  plotHistoryPoints.py  plotNfactorFromSections.py  plotNfactorWGN.py  plotSectionsDomain.py  plotVTU.py
scripts/pp/src/pp/: __init__.py  codenamesNfactor.py  fft.py  fileManagement.py  filterData.py  inputargs.py  noiseDetector.py
scripts/pp/tests/: FFTsignal.py  plotNfactorFromSectionsTest.py
src/: CLUSTER_REFERENCE_TIME.txt
src/blasius/: fitting.py  main.py  physicalQuantities.py  plot.py  solve_bvp.py
src/blasiusIncNS/: main.py  prova.py
src/ganlinGap/: README.txt
src/gap/: pbspro.job
(+14345 files in other folders)
